# Second-term

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
src/Lab2/: Book.txt  Functions.c  Functionslab2.c  Main.c  Main.h  Mainlab2.c  book.txt  newfile.txt
src/Lab2/secondpart/: file.c  file.h  newone.txt
src/Lab3/: Functions.c  Functionslab3.c  Main.c  Main.h  Mainlab3.c  Mainlab3.h
src/Lab4/: Functions.c  Functionslab4.c  Loggs.txt  Main.c  Main.h  Mainlab4.c  Mainlab4.h  data.txt  tree.dot
src/Lab5/: Domens.txt  Functions.c  Functionslab5.c  Main.c  Main.h  Mainlab5.c  Mainlab5.h
src/lab1/: Functions.c  Header.h  main.c  monitors.html  monitors.txt
