set(CMAKE_C_STANDARD 99)

add_executable(Secondterm src/lab1/main.c src/lab1/Header.h src/lab1/functions.c)
add_executable(Secondterm src/Lab2/Main.c src/Lab2/Main.h )
add_executable(Secondterm src/Lab2/secondpart/file.c src/Lab2/secondpart/file.h)
add_executable(Secondterm src/Lab3/Main.c src/Lab3/Main.h src/Lab3/Functions.c)
add_executable(Secondterm src/Lab4/Main.c src/Lab4/Main.h src/Lab4/Functions.c)
add_executable(Secondterm src/Lab5/Main.c src/Lab5/Main.h src/Lab5/Functions.c)

